--- a/src/components/css/about.css
+++ b/src/components/css/about.css
@@ -4,11 +4,75 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
   justify-content: center;
-  background: radial-gradient(circle at 70% 50%, #d00808,#d00808,#d00808,#d00808,#d00808,#d8640a,#ea9d44,#0f0f0f,#0f0f0f,#0f0f0f,#0f0f0f,#0f0f0f,#0f0f0f,#0f0f0f,#0f0f0f,#0f0f0f,  #0f0f0f,#0f0f0f,#0f0f0f,#0f0f0f, #0f0f0f, #0f0f0f, #0f0f0f, #0f0f0f, #0f0f0f);
+  background: linear-gradient(
+    295deg,
+    #d02308,
+    #d8640a,
+    #d08d09,
+    #c37b29,
+    #8a571d,
+    #694216,
+    #35220b,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f
+  );
+
+  /* background: radial-gradient(
+    circle at 70% 50%,
+    #d00808,
+    #d00808,
+    #d00808,
+    #d00808,
+    #d00808,
+    #d8640a,
+    #ea9d44,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f
+  ); */
   position: relative;
   overflow: hidden;
+}
+
+.rocketImg {
+  width: 800px;
+  z-index: 20;
+  align-self: self-end;
+  padding-right: 40px;
+}
+
+.sateliteImg {
+  position: absolute;
+  width: 200px;
+  bottom: 50px;
+  right: 60px;
 }
 
 .experience-title-container {
@@ -23,7 +87,7 @@
 }
 
 .section-title-about {
-  font-family: 'IBM Plex Mono';
+  font-family: "IBM Plex Mono";
   font-weight: 400;
   position: absolute;
   top: 40px;
@@ -70,7 +134,7 @@
   align-items: center;
   z-index: 10;
   color: white;
-  font-family: 'IBM Plex Mono';
+  font-family: "IBM Plex Mono";
   font-size: 14px;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -83,7 +147,11 @@
 }
 
 @keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
     transform: translateY(0);
   }
   40% {
@@ -106,15 +174,16 @@
 }
 
 .name {
-  font-family: 'Anton';
+  font-family: "Anton";
   font-size: 2.5rem;
   margin-bottom: 1rem;
   font-weight: 500;
 }
 
 .description {
+  width: 730px;
   text-align: justify;
-  font-family: 'IBM Plex Mono';
+  font-family: "IBM Plex Mono";
   font-size: 0.9rem;
   line-height: 1.6;
   margin-bottom: 2rem;
@@ -122,15 +191,18 @@
 }
 
 .about-button {
-  font-family: 'IBM Plex Mono';
+  position: absolute;
+  bottom: 40px;
+  right:60px;
+  font-family: "IBM Plex Mono";
   background: transparent;
   color: white;
   border: 1px solid white;
   padding: 12px 30px;
   font-size: 1rem;
   cursor: none;
+  border-radius: 5px;
   transition: all 0.3s ease;
-  position: relative;
   overflow: hidden;
 }
 
@@ -139,13 +211,18 @@
 }
 
 .about-button::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: -100%;
   width: 100%;
   height: 100%;
-  background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+  background: linear-gradient(
+    90deg,
+    transparent,
+    rgba(255, 255, 255, 0.2),
+    transparent
+  );
   transition: 0.5s;
 }
 
@@ -153,21 +230,17 @@
   left: 100%;
 }
 
-.name-container {
-  position: relative;
-  margin-bottom: 1rem;
-}
-
 /* Profile image styles */
 .profile-image-container {
   position: absolute;
-  bottom: 100%;
-  left: 0;
-  width: 100%;
+  left: 100px;
+  top: 100px;
+  width: 400px;
   display: flex;
+  /* display: flex;
   justify-content: center;
-  margin-bottom: 20px; /* Space between image and name */
-  z-index: 11;
+  margin-bottom: 20px; 
+  z-index: 11; */
 }
 
 .profile-image {
@@ -219,10 +292,9 @@
   overflow-y: auto;
   scroll-behavior: smooth;
   position: relative;
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
   overflow-y: scroll;
-
 }
 /* Binary Ruler Line Separator */
 .section-divider {
@@ -231,7 +303,7 @@
   background-color: black;
   position: relative;
   border-top: 3.1px solid rgb(86, 86, 86);
-  border-bottom: 3.1px solid rgb(86, 86, 86)  ;
+  border-bottom: 3.1px solid rgb(86, 86, 86);
   overflow: hidden;
 }
 
@@ -248,7 +320,7 @@
 
 .binary-digit {
   color: white;
-  font-family: 'IBM Plex Mono', monospace;
+  font-family: "IBM Plex Mono", monospace;
   font-size: 6px;
   opacity: 1;
   color: white;
@@ -256,7 +328,8 @@
 }
 
 @keyframes float {
-  0%, 100% {
+  0%,
+  100% {
     transform: translateY(0px);
   }
   50% {
@@ -286,7 +359,7 @@
   opacity: 1;
 }
 .section-title-experience {
-  font-family: 'Anton';
+  font-family: "Anton";
   font-weight: 400;
   font-size: 46px;
   position: relative; /* Changed from absolute */
@@ -338,7 +411,7 @@
   align-items: center; /* Center content vertically */
 }
 .experience-row.with-divider::after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   left: 40px;
@@ -407,7 +480,7 @@
 }
 
 .experience-details {
-  font-family: 'IBM Plex Mono';
+  font-family: "IBM Plex Mono";
   height: 100%;
   font-size: 0.7rem;
   font-weight: 300;
@@ -440,12 +513,35 @@
   display: flex;
   width: 100%;
   min-height: 120px; /* Give rows a consistent height */
-  background: linear-gradient(270deg, #a20606,#d8640a,#0f0f0f,#0f0f0f,#0f0f0f,#0f0f0f,#0f0f0f,#0f0f0f,#0f0f0f,#0f0f0f,#0f0f0f,  #0f0f0f,#0f0f0f,#0f0f0f,#0f0f0f, #0f0f0f, #0f0f0f, #0f0f0f, #0f0f0f, #0f0f0f);
+  background: linear-gradient(
+    270deg,
+    #a20606,
+    #d8640a,
+    #d08d09,
+    #a97408,
+    #775106,
+    #493203,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f
+  );
   align-items: center; /* Center content vertically */
-  border-bottom: 1px solid #ffffff33; /* Optional: Add a bottom border for separation */   
+  border-bottom: 1px solid #ffffff33; /* Optional: Add a bottom border for separation */
 }
 
-.experience-card{
+.experience-card {
   position: absolute;
   left: 30%; /* Start from the middle */
   top: 50%; /* Center vertically */
@@ -460,7 +556,7 @@
   animation: fadeIn 0.3s ease-out;
 }
 
-.card-image-container{
+.card-image-container {
   width: 30%;
   display: flex;
   align-items: center;
@@ -468,7 +564,7 @@
   background-color: #ffffff;
 }
 
-.card-details{
+.card-details {
   width: 70%;
   display: flex;
   color: #ffffff;
@@ -476,14 +572,13 @@
   justify-content: center; /* Center content vertically */
 }
 
-
 .experience-info {
   align-items: start;
   justify-items: start;
 }
 
 .company-name {
-  font-family: 'IBM Plex Mono';
+  font-family: "IBM Plex Mono";
   font-size: 1.3rem;
   font-weight: 600;
   color: #ffffff;
@@ -492,20 +587,20 @@
 }
 
 .company-designation {
-  font-family: 'IBM Plex Mono';
+  font-family: "IBM Plex Mono";
   font-size: 1.1rem;
   font-weight: 300;
   margin: 0px;
 }
 
 .company-duration {
-  font-family: 'IBM Plex Mono';
+  font-family: "IBM Plex Mono";
   font-size: 0.7rem;
   opacity: 0.8;
   font-weight: 400;
   color: #ea9d44;
   margin-top: 0px;
-  margin-bottom: 30px
+  margin-bottom: 30px;
 }
 
 /* .experience-details {
@@ -538,27 +633,27 @@
 }
 
 .experience-header h3 {
-  font-family: 'Anton';
+  font-family: "Anton";
   font-size: 1.5rem;
   font-weight: 400;
   margin: 0;
 }
 
 .experience-date {
-  font-family: 'IBM Plex Mono';
+  font-family: "IBM Plex Mono";
   font-size: 0.9rem;
   opacity: 0.8;
 }
 
 .experience-company {
-  font-family: 'IBM Plex Mono';
+  font-family: "IBM Plex Mono";
   font-size: 1.1rem;
   margin-bottom: 15px;
   color: #ea9d44;
 }
 
 .experience-description {
-  font-family: 'IBM Plex Mono';
+  font-family: "IBM Plex Mono";
   font-size: 0.5rem;
   line-height: 1.6;
   /* padding-left: 20px; */
@@ -571,9 +666,16 @@
 
 /* Adjust the about section to not take full viewport height */
 .about-section {
-  width: 100%;
   min-height: 100vh; /* Changed from height to min-height */
   /* ... (keep all other existing about-section styles) */
+}
+
+.about-description-section {
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+  justify-content: left;
+  align-items: start;
 }
 
 /* Add to about.css */
@@ -621,7 +723,7 @@
 
 /* Name styles */
 .name {
-  font-family: 'Anton';
+  font-family: "Anton";
   font-size: 2.5rem;
   font-weight: 500;
   cursor: pointer;
@@ -652,7 +754,7 @@
 }
 
 .skill-item {
-  font-family: 'IBM Plex Mono';
+  font-family: "IBM Plex Mono";
   font-size: 10px;
   color: black;
   margin: 0 20px;
@@ -686,17 +788,26 @@
 /* Contact Section */
 .contact-section {
   width: 100%;
-  background: linear-gradient(0deg,#d8640a,#ea9d44,#0f0f0f,#0f0f0f,#0f0f0f, #0f0f0f, #0f0f0f, #0f0f0f);
+  background: linear-gradient(
+    0deg,
+    #d8640a,
+    #ea9d44,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f
+  );
   color: white;
   position: relative;
   display: flex;
   box-sizing: border-box;
   padding: 80px 40px;
-
 }
 
 .contact-title {
-  font-family: 'Anton';
+  font-family: "Anton";
   font-weight: 400;
   font-size: 46px;
   text-align: center;
@@ -722,7 +833,7 @@
 .contact-method {
   display: flex;
   align-items: center;
-  font-family: 'IBM Plex Mono';
+  font-family: "IBM Plex Mono";
   transition: transform 0.3s ease;
 }
 
@@ -730,7 +841,7 @@
   transform: translateY(-5px);
 }
 
-.contact-methods a{
+.contact-methods a {
   text-decoration: none;
   cursor: none;
 }
@@ -741,7 +852,6 @@
   color: #e2e2e2;
 }
 
-
 .contact-text {
   font-size: 16px;
   text-decoration: none;
@@ -749,7 +859,7 @@
 }
 
 .contact-slang {
-  font-family: 'IBM Plex Mono';
+  font-family: "IBM Plex Mono";
   font-size: 18px;
   text-align: center;
   margin-top: 40px;
@@ -758,7 +868,3 @@
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   max-width: 600px;
 }
-
-
-
-
