--- a/src/components/css/project.css
+++ b/src/components/css/project.css
@@ -3,19 +3,38 @@
   height: 100vh;
   display: flex;
   align-items: center;
-  
+
   justify-content: center;
   background-color: rgb(23, 23, 23);
-  /* background: linear-gradient(115deg, #0f0f0f,#0f0f0f,#0f0f0f, #0f0f0f, #0f0f0f,#0f0f0f,#0f0f0f, #0f0f0f, #0f0f0f,#0f0f0f, #0f0f0f, #0f0f0f, #0f0f0f,#0f0f0f, #b16610); */
+  background: linear-gradient(
+    180deg,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #0f0f0f,
+    #b16610,
+    #d8640a,
+    #d08d09
+  );
   position: relative;
   overflow: hidden;
 }
 
-.section-title{
-  font-family: 'IBM Plex Mono';
+.section-title {
+  /* font-family: "IBM Plex Mono"; */
+  font-family: "Anton";
+  font-weight: 400;
   font-weight: 400;
   position: absolute;
-  top: 60px;
+  top: 40px;
   left: 40px;
   font-size: 38px;
 }
@@ -44,16 +63,15 @@
   color: white;
   transition: flex 0.5s ease-in-out, background-color 0.5s ease-in-out;
   cursor: none;
-  border-radius: 10px;
+  border-radius: 5px;
+  border:0.5px white solid;
   position: relative;
 }
 
 /* Bulged Corner and Circular Button */
 .project-box.expanded {
-  flex:4;
-
+  flex: 4;
 }
-
 
 .project-box.expanded .project-link {
   position: absolute;
@@ -87,6 +105,32 @@
   transition: opacity 0.5s ease-in-out;
 }
 
+.project-link-icon{
+  animation:bounce2 3s infinite;
+}
+
+
+@keyframes bounce2 {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+    transform: translateX(0);
+    transform: translate(0);
+  }
+  40% {
+    transform: translateY(-5px);
+        /* transform: translateX(10px); */
+
+  }
+  60% {
+    transform: translateY(-5px);
+        /* transform: translateX(5px); */
+
+  }
+}
 .expanded-content {
   display: flex;
   width: 100%;
@@ -101,8 +145,10 @@
   flex-direction: column;
   justify-content: center;
   padding: 10px;
-  font-family: 'IBM Plex Mono';
-  color: black;
+  font-weight: 500;
+  font-size: 16px;
+  font-family: "IBM Plex Mono";
+  color: rgb(255, 255, 255);
 }
 
 .project-description {
@@ -116,7 +162,7 @@
   position: relative;
   text-align: left;
   padding-left: 20px;
-  font-size: 13px;
+  font-size: 12px;
   line-height: 1.4;
 }
 
@@ -124,18 +170,21 @@
   content: "•";
   position: absolute;
   left: 0;
-  color: rgb(0, 0, 0);
-  font-size: 18px;
+  color: rgb(244, 244, 244);
+  font-size: 20px;
 }
 
 .project-image-container {
-  flex: 3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* flex: 3;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
   height: 100%;
-  border-radius: 10px;
+  border-radius: 10px; */
 }
 
 /* .project-image {
@@ -157,10 +206,10 @@
 }
 
 .project-box.expanded .project-image {
-  height: 70%;
+  /* height: 70%; */
   width: auto;
   max-width: 80%;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 /* Project Name Container */
@@ -173,6 +222,8 @@
   transform: translateX(-50%); /* Center horizontally */
   width: 100%;
   text-align: center;
+  font-family: "Anton";
+  font-weight: 400;
   z-index: 10; /* Ensure it's above other elements */
 }
 
@@ -183,11 +234,12 @@
 }
 
 .project-name {
-  font-size: 24px;
+  font-size: 28px;
   font-weight: 200;
   color: white;
   opacity: 0;
-  font-family: 'IBM Plex Mono';
+  font-family: "Anton";
+  font-weight: 400;
   transform: translateY(20px); /* Start slightly below */
   transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
   position: absolute; /* Position names absolutely within the container */
@@ -199,8 +251,10 @@
 }
 /* Image Movement */
 .project-image {
-  height: 70%;
-  object-fit: cover;
+  width: 100px;
+  height: 300px;
+  object-fit: fill;
+  border-radius: 10px;
   transition: opacity 0.5s ease-in-out, transform 0.1s ease-in-out;
 }
 
@@ -222,7 +276,11 @@
   position: absolute;
   left: 0;
   height: 1px;
-  background: linear-gradient(to right, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.8) 0%,
+    rgba(255, 255, 255, 0) 100%
+  );
   z-index: 0; /* Ensure horizontal lines are below vertical lines */
 }
 
@@ -231,7 +289,11 @@
   position: absolute;
   top: 0;
   width: 1px; /* Very thin line */
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0.8) 0%,
+    rgba(255, 255, 255, 0) 100%
+  );
   z-index: 0; /* Ensure vertical lines are below the content */
 }
 
@@ -261,7 +323,11 @@
   left: 0;
   width: 100%;
   height: 40px;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0)); /* Fading white pulse */
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0.8),
+    rgba(255, 255, 255, 0)
+  ); /* Fading white pulse */
   opacity: 0;
   animation: pulse-animation 3s infinite;
 }
