--- a/src/components/css/ToggleButton.css
+++ b/src/components/css/ToggleButton.css
@@ -1,14 +1,12 @@
-
-
 .toggle-container {
   width: 128px;
   height: 70px;
   background-color: #eaeaea;
   border-radius: 18px;
-  position: fixed; 
-  top: 25px; 
-  right: 25px; 
-  z-index: 1000; 
+  position: fixed;
+  top: 25px;
+  right: 25px;
+  z-index: 1000;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,13 +19,13 @@
 }
 
 .toggle-container.toggled {
-  background-color: rgb(22, 22, 22); /* Green background when toggled */
+  background-color: rgb(22, 22, 22);
 }
 
 .toggle-text {
   position: absolute;
   top: 15px;
-  font-family: 'IBM Plex Mono';
+  font-family: "IBM Plex Mono";
   transition: all 0.3s ease-in-out;
   overflow: hidden;
   width: 100%;
@@ -64,14 +62,6 @@
   transform: translateY(0);
 }
 
-/* Linear gradient for text on hover */
-/* .toggle-container:hover .toggle-text .toggle-text-inner span {
-  background: linear-gradient(45deg, #000000, #000000);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-} */
-
 .toggle-text.toggled {
   transform: translateY(45px);
   color: #ffffff;
@@ -92,7 +82,7 @@
 
 .toggle-switch.toggled {
   transform: translateY(-28px);
-  background-color: #ffffff;  
+  background-color: #ffffff;
 }
 
 .toggle-icon {
@@ -102,4 +92,28 @@
 
 .toggle-switch.toggled .toggle-icon {
   color: rgb(0, 0, 0);
+}
+
+@media (max-width: 600px) {
+
+  .toggle-container{
+    width: 90px;
+  height: 55px;
+  border-radius: 10px;
+  }
+
+  .toggle-switch{
+  width: 80px;
+  height: 24px;
+  border-radius: 8px;
+  }
+
+  .toggle-icon {
+  color: #e7e7e7;
+  font-size: 12px;
+}
+
+.toggle-text.toggled {
+  transform: translateY(30px);
+}
 }
