Color grading fixed

--- a/src/components/css/about.css
+++ b/src/components/css/about.css
@@ -10,12 +10,12 @@
     295deg,
     #d02308,
     #d8640a,
-    #d08d09,
-    #c37b29,
-    #8a571d,
-    #694216,
-    #35220b,
-    #0f0f0f,
+    #e59d0e,
+    #e38f2f,
+    #b77528,
+    #9c6423,
+    #644116,
+    #3c280f,
     #0f0f0f,
     #0f0f0f,
     #0f0f0f,
