--- a/src/components/css/home.css
+++ b/src/components/css/home.css
@@ -9,13 +9,13 @@
     #950505,
     #9e0404,
     #9c0505,
-    #b95408,
-    #d28a36,
-    #cf8733,
-    #83521a,
-    #5a3913,
-    #2f1d09,
-    #0f0f0f,
+    #cd5c07,
+    #ef9936,
+    #ed9734,
+    #ad6b1f,
+    #845219,
+    #623c12,
+    #32200b,
     #0f0f0f,
     #0f0f0f,
     #0f0f0f,
