--- a/src/components/css/about.css
+++ b/src/components/css/about.css
@@ -735,7 +735,7 @@
   max-width: 600px;
 }
 
-  @media (max-width: 600px) {
+@media (max-width: 600px) {
   .rocketImg {
     width: 300px;
     /* align-self: center; */
@@ -747,7 +747,7 @@
   }
 
   .description {
-    width: 270px;
+    width: 290px;
     font-size: 0.63rem;
     margin: 0px;
   }
@@ -774,6 +774,7 @@
   .about-button {
     align-self: center;
     bottom: 80px;
+    left: 50px;
   }
 
   .about-description-section {
@@ -819,7 +820,7 @@
     align-self: start;
     text-align: left;
   }
-  ul{
+  ul {
     padding-inline-start: 5px;
   }
 }
